force-app/main/default/objects/Case/fields/AnyDamage__c.field-meta.xml
<CustomField>
    <fullName>AnyDamage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est-ce qu&apos;il y a un dommage</label>
    <type>Checkbox</type>
</CustomField>