force-app/main/default/objects/Case/fields/CategorieRequete__c.field-meta.xml
<CustomField>
    <fullName>CategorieRequete__c</fullName>
    <label>Catégorie de la requête</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traitement courrier</fullName>
            </value>
            <value>
                <fullName>Création prestataire</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;ouverture de sinistre</fullName>
            </value>
            <value>
                <fullName>Ordonnancement d’un règlement</fullName>
            </value>
            <value>
                <fullName>Révision semestrielle</fullName>
            </value>
            <value>
                <fullName>Révision Annuelle</fullName>
            </value>
            <value>
                <fullName>Provision nulle</fullName>
            </value>
            <value>
                <fullName>Révision Reste à payer nul</fullName>
            </value>
            <value>
                <fullName>Rappel sur délai de forclusion</fullName>
            </value>
            <value>
                <fullName>Révision 20 jours</fullName>
            </value>
            <value>
                <fullName>Réaffectation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>