force-app/main/default/objects/Case/fields/CausesOfClaim__c.field-meta.xml
<CustomField>
    <fullName>CausesOfClaim__c</fullName>
    <label>Causes sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TriggeringEventOfClaim__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choc / Collision</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Renversement</fullName>
            </value>
            <value>
                <fullName>Carambolage</fullName>
            </value>
            <value>
                <fullName>Chute d&apos;objet</fullName>
            </value>
            <value>
                <fullName>Jet de pierre</fullName>
            </value>
            <value>
                <fullName>Sortie de route</fullName>
            </value>
            <value>
                <fullName>Heurt de véhicule</fullName>
            </value>
            <value>
                <fullName>Heurt d&apos;obstacle fixe</fullName>
            </value>
            <value>
                <fullName>Perte de contrôle</fullName>
            </value>
            <value>
                <fullName>Accident avec piéton</fullName>
            </value>
            <value>
                <fullName>Accident avec animal</fullName>
            </value>
            <value>
                <fullName>Inondation</fullName>
            </value>
            <value>
                <fullName>Tempête</fullName>
            </value>
            <value>
                <fullName>Grêle</fullName>
            </value>
            <value>
                <fullName>Tremblement de terre</fullName>
            </value>
            <value>
                <fullName>Glissement de terrain</fullName>
            </value>
            <value>
                <fullName>Chute d&apos;arbre</fullName>
            </value>
            <value>
                <fullName>Foudre</fullName>
            </value>
            <value>
                <fullName>Vent violent</fullName>
            </value>
            <value>
                <fullName>Submersion</fullName>
            </value>
            <value>
                <fullName>Coulée de boue</fullName>
            </value>
            <value>
                <fullName>Incendie</fullName>
            </value>
            <value>
                <fullName>Court-circuit</fullName>
            </value>
            <value>
                <fullName>Explosion</fullName>
            </value>
            <value>
                <fullName>Surchauffe moteur</fullName>
            </value>
            <value>
                <fullName>Incendie criminel</fullName>
            </value>
            <value>
                <fullName>Propagation de feu</fullName>
            </value>
            <value>
                <fullName>Auto-combustion</fullName>
            </value>
            <value>
                <fullName>Vol total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>