force-app/main/default/objects/Case/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sinistre</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions</relationshipName>
    <type>Lookup</type>
</CustomField>