force-app/main/default/objects/Case/fields/Claimant__c.field-meta.xml
<CustomField>
    <fullName>Claimant__c</fullName>
    <label>Déclarant du sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assuré</fullName>
            </value>
            <value>
                <fullName>Tiers</fullName>
            </value>
            <value>
                <fullName>Compagnie adverse</fullName>
            </value>
            <value>
                <fullName>Police / Gendarmerie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>