force-app/main/default/objects/Case/fields/CountryOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>CountryOfOccurrence__c</fullName>
    <label>Pays de survenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pays</valueSetName>
    </valueSet>
</CustomField>