force-app/main/default/objects/Case/fields/Date_Echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_Echeance__c</fullName>
    <formula>DATEVALUE(CreatedDate) + Delais_Traitement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>