force-app/main/default/objects/Case/fields/DateCreationRequete__c.field-meta.xml
<CustomField>
    <fullName>DateCreationRequete__c</fullName>
    <label>Date création de la requête</label>
    <type>Date</type>
</CustomField>