force-app/main/default/objects/Case/fields/DateOfDeclarationCreation__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeclarationCreation__c</fullName>
    <label>Date création déclaration</label>
    <type>Date</type>
</CustomField>