force-app/main/default/objects/Case/fields/DateOfDeclarationSubmission__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeclarationSubmission__c</fullName>
    <label>Date dépôt Déclaration</label>
    <type>Date</type>
</CustomField>