force-app/main/default/objects/Case/fields/DateOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>DateOfOccurrence__c</fullName>
    <label>Date de survenance</label>
    <type>DateTime</type>
</CustomField>