force-app/main/default/objects/Case/fields/DateReception__c.field-meta.xml
<CustomField>
    <fullName>DateReception__c</fullName>
    <label>Date de réception de la note d&apos;honoraire</label>
    <type>Date</type>
</CustomField>