force-app/main/default/objects/Case/fields/DateReceptionRapport__c.field-meta.xml
<CustomField>
    <fullName>DateReceptionRapport__c</fullName>
    <label>Date de réception du rapport</label>
    <description>Date de réception du rapport d'expertise de la mission. Utilisé pour le contrôle de clôture de l'étape Expertise (CR2) du parcours PEC.</description>
    <type>Date</type>
</CustomField>