force-app/main/default/objects/Case/fields/Declaration_Liee__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Liee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Déclaration liée</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>