force-app/main/default/objects/Case/fields/Delais_Traitement__c.field-meta.xml
<CustomField>
    <fullName>Delais_Traitement__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Délais de traitement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>