force-app/main/default/objects/Case/fields/Delaisdetraitement__c.field-meta.xml
<CustomField>
    <fullName>Delaisdetraitement__c</fullName>
    <label>Délais de traitement</label>
    <type>DateTime</type>
</CustomField>