force-app/main/default/objects/Case/fields/InsuredIsContact__c.field-meta.xml
<CustomField>
    <fullName>InsuredIsContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assuré est la personne à contacter?</label>
    <type>Checkbox</type>
</CustomField>