force-app/main/default/objects/Case/fields/LastWizardStep__c.field-meta.xml
<CustomField>
    <fullName>LastWizardStep__c</fullName>
    <label>Dernière étape parcours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>