force-app/main/default/objects/Case/fields/Motif_Reaffectation__c.field-meta.xml
<CustomField>
    <fullName>Motif_Reaffectation__c</fullName>
    <label>Motif de réaffectation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>