force-app/main/default/objects/Case/fields/MotifRejet__c.field-meta.xml
<CustomField>
    <fullName>MotifRejet__c</fullName>
    <label>Motif de rejet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>