force-app/main/default/objects/Case/fields/NatureMission__c.field-meta.xml
<CustomField>
    <fullName>NatureMission__c</fullName>
    <label>Nature de la mission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expertise Automobile</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
            <value>
                <fullName>Expertise classique</fullName>
            </value>
            <value>
                <fullName>Expertise additive</fullName>
            </value>
            <value>
                <fullName>Expertise contradictoire</fullName>
            </value>
            <value>
                <fullName>Expertise sur document</fullName>
            </value>
            <value>
                <fullName>Appréciation</fullName>
            </value>
            <value>
                <fullName>Avis d&apos;expertise médical</fullName>
            </value>
            <value>
                <fullName>Expertise médicolégal</fullName>
            </value>
            <value>
                <fullName>Demande de complément d&apos;information</fullName>
            </value>
            <value>
                <fullName>Suspicion de fraude</fullName>
            </value>
            <value>
                <fullName>Saisie Arrêt</fullName>
            </value>
            <value>
                <fullName>Consultation judiciaire</fullName>
            </value>
            <value>
                <fullName>Sommation interpellative</fullName>
            </value>
            <value>
                <fullName>Recours judiciaire</fullName>
            </value>
            <value>
                <fullName>Procédure judiciaire</fullName>
            </value>
            <value>
                <fullName>Demande de PV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>