force-app/main/default/objects/Case/fields/noteRecue__c.field-meta.xml
<CustomField>
    <fullName>noteRecue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>La note d&apos;honoraire reçue</label>
    <type>Checkbox</type>
</CustomField>