force-app/main/default/objects/Case/fields/Num_ro_d_immatriculation__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_d_immatriculation__c</fullName>
    <formula>Vehicule__r.RegistrationNumber__c &amp; &quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro d&apos;immatriculation</label>
    <type>Text</type>
</CustomField>