force-app/main/default/objects/Case/fields/NumberOfVehiclesInvolved__c.field-meta.xml
<CustomField>
    <fullName>NumberOfVehiclesInvolved__c</fullName>
    <label>Nombre de véhicules impliqués</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>