force-app/main/default/objects/Case/fields/NumeroRequete__c.field-meta.xml
<CustomField>
    <fullName>NumeroRequete__c</fullName>
    <displayFormat>OFF-{0000}</displayFormat>
    <label>N° Requete</label>
    <type>AutoNumber</type>
</CustomField>