force-app/main/default/objects/Case/fields/OpposingParty__c.field-meta.xml
<CustomField>
    <fullName>OpposingParty__c</fullName>
    <label>Compagnie adverse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Véhicule</fullName>
            </value>
            <value>
                <fullName>Cyclomoteur</fullName>
            </value>
            <value>
                <fullName>Piéton / Cycliste / Charette</fullName>
            </value>
            <value>
                <fullName>Animal</fullName>
            </value>
            <value>
                <fullName>Objet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>