force-app/main/default/objects/Case/fields/Police__c.field-meta.xml
<CustomField>
    <fullName>Police__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Police</label>
    <referenceTo>InsurancePolicy__c</referenceTo>
    <relationshipLabel>Déclarations</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>