force-app/main/default/objects/Case/fields/RapportRecu__c.field-meta.xml
<CustomField>
    <fullName>RapportRecu__c</fullName>
    <label>Rapport reçu</label>
    <description>Indique que le rapport d'expertise de la mission a été reçu. Utilisé pour le contrôle de clôture de l'étape Expertise (CR2) du parcours PEC.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>