force-app/main/default/objects/Case/fields/ReaffecterA__c.field-meta.xml
<CustomField>
    <fullName>ReaffecterA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Réaffecter à</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>