force-app/main/default/objects/Case/fields/SourceRequete__c.field-meta.xml
<CustomField>
    <fullName>SourceRequete__c</fullName>
    <label>Source de la requête</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Courrier GED</fullName>
            </value>
            <value>
                <fullName>Instruction</fullName>
            </value>
            <value>
                <fullName>Déclaration</fullName>
            </value>
            <value>
                <fullName>Règlement</fullName>
            </value>
            <value>
                <fullName>Révision Sinistre</fullName>
            </value>
            <value>
                <fullName>Instruction Recours Sortant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>