force-app/main/default/objects/Case/fields/TypePrestataire__c.field-meta.xml
<CustomField>
    <fullName>TypePrestataire__c</fullName>
    <label>Type de prestataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expert Automobile</fullName>
            </value>
            <value>
                <fullName>Garagiste</fullName>
            </value>
            <value>
                <fullName>Médecin conseil</fullName>
            </value>
            <value>
                <fullName>Médecin médicolégal</fullName>
            </value>
            <value>
                <fullName>Enquêteur</fullName>
            </value>
            <value>
                <fullName>Avocat</fullName>
            </value>
            <value>
                <fullName>Réparateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>