force-app/main/default/objects/Case/fields/TypeRequete__c.field-meta.xml
<CustomField>
    <fullName>TypeRequete__c</fullName>
    <label>Type de la requête</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réaffecter la déclaration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>