force-app/main/default/objects/Case/fields/UniteGestion__c.field-meta.xml
<CustomField>
    <fullName>UniteGestion__c</fullName>
    <label>Unité de gestion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>