force-app/main/default/objects/Case/fields/VehicleIsDamaged__c.field-meta.xml
<CustomField>
    <fullName>VehicleIsDamaged__c</fullName>
    <label>Véhicule est-il endommagé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endommagé</fullName>
            </value>
            <value>
                <fullName>Pas de dommage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>