force-app/main/default/objects/Case/fields/VilleIntervention__c.field-meta.xml
<CustomField>
    <fullName>VilleIntervention__c</fullName>
    <label>Ville d&apos;intervention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>