force-app/main/default/objects/Case/recordTypes/Declaration.recordType-meta.xml
<RecordType>
    <fullName>Declaration</fullName>
    <active>true</active>
    <businessProcess>Record Process</businessProcess>
    <label>Declaration</label>
</RecordType>