force-app/main/default/objects/Case/recordTypes/Mission.recordType-meta.xml
<RecordType>
    <fullName>Mission</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Mission</label>
</RecordType>