force-app/main/default/objects/Case/recordTypes/Requete.recordType-meta.xml
<RecordType>
    <fullName>Requete</fullName>
    <active>true</active>
    <businessProcess>Record Process</businessProcess>
    <label>requête</label>
</RecordType>